test/fixtures/compile/class/class.override.smth.c_.c_e.ks
class Foobar {
	static foobar() {
		return 1
	}
}

class Quxbaz extends Foobar {
	static foobar() {
		return 2
	}
}